<resources>
    <string name="app_name">Neo Chat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="profile">Profile</string>
    <string name="add_account">Add Account</string>
    <string name="change_password">Change Password</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="get_support">Get Support</string>
    <string name="about_neo_chat">About Neo Chat</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="security_settings">Security Settings</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="manage_devices">Manage Devices</string>
    <string name="login_history">Login History</string>
    <string name="application_settings">Application Settings</string>
    <string name="verified">Verified</string>
</resources>